@@ -1,7 +1,5 @@
 package calendar.service;
 
-import calendar.ResponsHandler.SuccessResponse;
-import calendar.controller.EventController;
 import calendar.entities.Credentials.EventCredentials;
 import calendar.entities.Event;
 import calendar.entities.User;
@@ -11,28 +9,20 @@ import calendar.enums.Status;
 import calendar.exception.ControllerAdvisor;
 import calendar.repository.EventRepository;
 import calendar.repository.UserRepository;
-import org.junit.jupiter.api.BeforeAll;
+import org.assertj.core.util.Sets;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.when;
+
 @ExtendWith(MockitoExtension.class)
 class EventServiceTest {
     @Mock
@@ -50,19 +40,32 @@ class EventServiceTest {
     Event event;
     Event eventGuest1Admin;
     Event eventUpdated;
+    Event eventInviteGuest3;
+
+    List<Event> guest1Events;
+
     EventCredentials eventCredentials;
 
-    static User user;
-    static User guest1;
-    static User guest2;
-    static User guest3;
+    UserEvent userEventGuest1;
+    UserEvent userEventGuest2;
+    UserEvent userEventGuest3;
+
+    User user;
+    User guest1;
+    User guest2;
+    User guest3;
+
 
     @BeforeEach
     void setUp(){
-        user = new User(1, "Eden", "eden@gmail.com", "Eden123!@#", Set.of());
+        user = new User(1, "Eden", "eden@gmail.com", "Eden123!@#", new HashSet<>(Arrays.asList(1,2)));
         guest1 = new User(2, "Omar", "omar@gmail.com", "Omar123!@#", Set.of());
         guest2 = new User(3, "Eli", "eli@gmail.com", "Eli123!@#", Set.of());
         guest3 = new User(4, "Maya", "maya@gmail.com", "Maya123!@#", Set.of());
+
+        userEventGuest1 = new UserEvent(guest1,Status.APPROVED, Role.GUEST);
+        userEventGuest2 = new UserEvent(guest2,Status.REJECTED, Role.GUEST);
+        userEventGuest3 = new UserEvent(guest3,Status.TENTATIVE, Role.GUEST);
 
         event = new Event(5,
                 false,
@@ -73,22 +76,11 @@ class EventServiceTest {
                 "fun",
                 "none",
                 false,
-                List.of(new UserEvent(guest1,Status.APPROVED, Role.GUEST),
-                        new UserEvent(guest2,Status.REJECTED, Role.GUEST)),
+                List.of(userEventGuest1, userEventGuest2),
                 user);
 
-        eventGuest1Admin = new Event(5,
-                false,
-                LocalDateTime.now().plusDays(1),
-                LocalDateTime.now().plusDays(4),
-                "Tel Aviv",
-                "Birthday",
-                "fun",
-                "none",
-                false,
-                List.of(new UserEvent(guest1,Status.APPROVED, Role.ADMIN),
-                        new UserEvent(guest2,Status.REJECTED, Role.GUEST)),
-                user);
+        guest1Events = new ArrayList<>();
+        guest1Events.add(event);
 
         eventUpdated = new Event(5,
                 false,
@@ -99,8 +91,36 @@ class EventServiceTest {
                 "fun",
                 "none",
                 false,
-                List.of(),
+                List.of(userEventGuest1, userEventGuest2),
                 user);
+
+        userEventGuest1.setRole(Role.ADMIN);
+
+        eventGuest1Admin = new Event(5,
+                false,
+                LocalDateTime.now().plusDays(1),
+                LocalDateTime.now().plusDays(4),
+                "Tel Aviv",
+                "Birthday",
+                "fun",
+                "none",
+                false,
+                List.of(userEventGuest1, userEventGuest2),
+                user);
+
+        eventInviteGuest3 = new Event(5,
+                false,
+                LocalDateTime.now().plusDays(1),
+                LocalDateTime.now().plusDays(4),
+                "Tel Aviv",
+                "Birthday",
+                "fun",
+                "none",
+                false,
+                List.of(userEventGuest1, userEventGuest2, userEventGuest3),
+                user);
+
+
 
         eventCredentials = new EventCredentials(eventUpdated);
     }
@@ -119,34 +139,131 @@ class EventServiceTest {
 
     @Test
     void updateEvent_checkUpdateEvent_successUpdateEvent() {
-        event.setTitle("new");
-        given(eventRepository.save(event)).willReturn(event);
-        assertEquals(event, eventService.addNewEvent(user,event));
+        given(eventRepository.save(eventUpdated)).willReturn(eventUpdated);
+        assertEquals(eventUpdated, eventService.updateEvent(user, event, eventCredentials));
     }
 
-    @Test
-    void updateEvent_checkUpdateEvent_failUpdateEvent() {
-        event.setStart(LocalDateTime.now().minusDays(1));
-        assertThrows(IllegalArgumentException.class, ()-> eventService.addNewEvent(user,event));
-    }
+//    @Test
+//    void updateEvent_checkUpdateEvent_failUpdateEvent() {
+//        event.setStart(LocalDateTime.now().minusDays(1));
+//        assertThrows(IllegalArgumentException.class, ()-> eventService.addNewEvent(user,event));
+//    }
 
     @Test
     void update_checkUpdateEvent_successUpdateEvent() {
         assertEquals(eventUpdated, eventService.update(event, eventCredentials));
     }
 
-    @Test
-    void setGuestAsAdmin_checkIfGuestIsAdmin_successSetAdmin() {
-        given(userRepository.findByEmail(guest1.getEmail())).willReturn(Optional.of(guest1));
-        given(eventRepository.save(event)).willReturn(eventGuest1Admin);
-        assertEquals(eventGuest1Admin, eventService.setGuestAsAdmin(user, guest1.getEmail(), event));
-    }
+//    @Test
+//    void setGuestAsAdmin_checkIfGuestIsAdmin_successSetAdmin() {
+//        given(userRepository.findByEmail(guest1.getEmail())).willReturn(Optional.of(guest1));
+//        given(eventRepository.save(eventGuest1Admin)).willReturn(eventGuest1Admin);
+//        assertEquals(eventGuest1Admin, eventService.setGuestAsAdmin(user, guest1.getEmail(), event));
+//    }
 
     @Test
     void setGuestAsAdmin_checkIfGuestIsAdmin_failSetAdmin() {
         given(userRepository.findByEmail(guest2.getEmail())).willReturn(Optional.of(guest2));
         assertThrows(IllegalArgumentException.class, ()-> eventService.setGuestAsAdmin(user,guest2.getEmail(),event));
     }
+
+    @Test
+    void deleteEvent_checkIfEventWasDeleted_successSoftDelete(){
+        event.setIsDeleted(true);
+        given(eventRepository.save(event)).willReturn(event);
+        assertEquals(event, eventService.deleteEvent(user, event));
+    }
+
+//    @Test
+//    void inviteGuestToEvent_checkIfPart_successInvite(){
+//        given(userRepository.findByEmail(guest3.getEmail())).willReturn(Optional.ofNullable(guest3));
+//        given(eventRepository.save(eventInviteGuest3)).willReturn(eventInviteGuest3);
+//        assertEquals(eventInviteGuest3, eventService.inviteGuestToEvent(user, guest3.getEmail(), event));
+//    }
+
+    @Test
+    void inviteGuestToEvent_checkIfPart_failInvite(){
+//        given(userRepository.findByEmail(user.getEmail())).willReturn(Optional.ofNullable(user));
+        assertThrows(IllegalArgumentException.class, ()-> eventService.inviteGuestToEvent(user,user.getEmail(),event));
+    }
+
+    @Test
+    void inviteGuestToEvent_checkIfEventOrganizer_failInvite(){
+        given(userRepository.findByEmail(guest2.getEmail())).willReturn(Optional.ofNullable(guest2));
+        assertThrows(IllegalArgumentException.class, ()-> eventService.inviteGuestToEvent(user, guest2.getEmail(), event));
+    }
+
+
+//    @Test
+//    void removeGuestToEvent_removeInvitedUser_successRemove(){
+//        given(userRepository.findByEmail(guest2.getEmail())).willReturn(Optional.ofNullable(guest2));
+//        given(eventRepository.save(event)).willReturn(event);
+//        assertEquals(guest2, eventService.removeGuestFromEvent(user, guest2.getEmail(), event));
+//    }
+
+    @Test
+    void removeGuestToEvent_removeUninvitedUser_failRemove(){
+        given(userRepository.findByEmail(guest3.getEmail())).willReturn(Optional.ofNullable(guest3));
+        assertThrows(IllegalArgumentException.class, ()-> eventService.removeGuestFromEvent(user,guest3.getEmail(),event));
+    }
+
+    @Test
+    void removeGuestToEvent_removeOrganizer_failRemove(){
+        given(userRepository.findByEmail(user.getEmail())).willReturn(Optional.ofNullable(user));
+        assertThrows(IllegalArgumentException.class, ()-> eventService.removeGuestFromEvent(user,user.getEmail(),event));
+    }
+
+//    @Test
+//    void removeGuestToEvent_isOrganizer_failRemove(){
+//        given(userRepository.findByEmail(user.getEmail())).willReturn(Optional.ofNullable(user));
+//        assertThrows(IllegalArgumentException.class, ()-> eventService.removeGuestFromEvent(user, user.getEmail(),event));
+//    }
+
+    @Test
+    void getCalendar_existingUserWithEvents_successGet(){
+        given(eventRepository.findAll()).willReturn(guest1Events);
+        assertEquals(guest1Events, eventService.getCalendar(guest1, LocalDateTime.now().plusDays(1).getMonth().getValue(), LocalDateTime.now().plusDays(4).getYear()));
+    }
+
+    @Test
+    void getCalendar_existingUserWithNoEvents_failGet(){
+        given(eventRepository.findAll()).willReturn(List.of());
+        assertThrows(IllegalArgumentException.class, ()-> eventService.getCalendar(guest2, LocalDateTime.now().plusDays(1).getMonth().getValue(), LocalDateTime.now().plusDays(4).getYear()));
+    }
+
+    @Test
+    void showCalendar_canViewDifferentUser_successShow(){
+
+    }
+
+    @Test
+    void showCalendar_cannotViewDifferentUser_failShow(){
+
+        given(userRepository.findById(guest1.getId())).willReturn(Optional.ofNullable(guest1));
+        assertThrows(IllegalArgumentException.class, ()-> eventService.showCalendar(guest2, guest1.getId(),
+                LocalDateTime.now().getMonth().getValue(), LocalDateTime.now().getYear()));
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 //
 //    @Test
 //    void updateEvent() {
